infra/yc-testing/ingress-ui-network.yaml
# https://cloud.yandex.ru/docs/managed-kubernetes/solutions/alb-ingress-controller#create-ingress-and-apps
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  annotations:
    # cloud-walle-testing-nets-ru-central1-a,cloud-walle-testing-nets-ru-central1-b,cloud-walle-testing-nets-ru-central1-c
    ingress.alb.yc.io/subnets: buca1cd12tlnso2t9dlv,blt62meukkkjdkbardae,fo2qeta89li7tkesdc69
    # ingress.alb.yc.io/security-groups: # TODO: Add list of security groups.
    ingress.alb.yc.io/external-ipv6-address: 2a0d:d6c0:0:ff1b::64  # wall-e-testing.cloud.yandex.ru
    ingress.alb.yc.io/group-name: walle-ui-ingress-group-testing
spec:
  tls:
    - hosts:
        - wall-e-testing.cloud.yandex.ru
      secretName: yc-certmgr-cert-id-fd3d8fjkvjovg4ur1a4e  # wall-e-testing-cloud-yandex-ru
